Fix hero image and header on mobile

--- a/Metalog/src/sass/_components/_colors.scss
+++ b/Metalog/src/sass/_components/_colors.scss
@@ -20,6 +20,7 @@ $color-chateau-green: #4CAF5B; //Success color
 $color-wild-willow: #ACCD6C;
 /* Gray group */
 $color-dusty-gray: #979797;
+$silver: #cccccc;
 /************************* 
 	Main colors end
 *************************/
