--- a/Metalog/src/sass/_components/_nav.scss
+++ b/Metalog/src/sass/_components/_nav.scss
@@ -12,10 +12,10 @@ $nav-bg: rgba($color-white, .6);
 	width: 100%;
 	left: 0;
 	top: 0;
-	@include respond-to(xs) {
-		position: static;
-		background: $color-white;
-	}
+	// @include respond-to(xs) {
+	// 	position: static;
+	// 	background: $color-white;
+	// }
 }
 
 .site-brand {
